[gd_scene load_steps=9 format=3 uid="uid://c5cqs18w0x7nt"]

[ext_resource type="Script" path="res://Scenes/Explore/Player/player_explore.gd" id="1_j7d5q"]
[ext_resource type="PackedScene" uid="uid://dvqal5fykxiyr" path="res://Assets/3D/Player/Male/animated_player.tscn" id="2_qnr8v"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_nsmtj"]
height = 3.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cgwym"]
animation = &"Idle_e"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v6m1w"]
animation = &"run_e"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_c5t8p"]
blend_point_0/node = SubResource("AnimationNodeAnimation_cgwym")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_v6m1w")
blend_point_1/pos = 1.0

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_j273f"]
graph_offset = Vector2(-431.716, -2.82304)
nodes/Running/node = SubResource("AnimationNodeBlendSpace1D_c5t8p")
nodes/Running/position = Vector2(-200, 120)
node_connections = [&"output", 0, &"Running"]

[sub_resource type="SphereShape3D" id="SphereShape3D_j07qo"]
radius = 5.0

[node name="PlayerExplore" type="CharacterBody3D"]
collision_mask = 6
script = ExtResource("1_j7d5q")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("CylinderShape3D_nsmtj")

[node name="Model" type="Node3D" parent="."]

[node name="animated_player" parent="Model" instance=ExtResource("2_qnr8v")]
transform = Transform3D(-0.045, 0, -6.79481e-09, 0, 0.045, 0, 6.79481e-09, 0, -0.045, 0, 0, 0)

[node name="Skeleton3D" parent="Model/animated_player/Armature" index="0"]
bones/1/rotation = Quaternion(-0.661076, -1.63291e-16, -3.59808e-18, 0.750319)
bones/2/rotation = Quaternion(-0.105269, 1.18547e-07, -1.2549e-08, 0.994444)
bones/3/rotation = Quaternion(0.142743, 1.46503e-14, 3.40327e-08, 0.98976)
bones/4/rotation = Quaternion(-0.00359652, 7.21677e-15, -8.57478e-10, 0.999994)
bones/5/rotation = Quaternion(0.476513, 0.510402, 0.580711, -0.418569)
bones/6/rotation = Quaternion(0.0582794, 0.0572944, 0.114217, 0.990089)
bones/7/rotation = Quaternion(-0.000923483, -0.00104867, -0.0753982, 0.997153)
bones/9/rotation = Quaternion(-0.0108963, -5.04967e-08, -0.103201, 0.994601)
bones/10/rotation = Quaternion(0.0892345, -0.661327, 0.699463, -0.255802)
bones/11/rotation = Quaternion(-0.0819203, -4.76428e-08, -0.775882, 0.625536)
bones/12/rotation = Quaternion(-0.476513, 0.510402, 0.58071, 0.418569)
bones/13/rotation = Quaternion(0.0582795, -0.0572943, -0.11422, 0.990088)
bones/14/rotation = Quaternion(-0.000923536, 0.00104867, 0.0754025, 0.997152)
bones/16/rotation = Quaternion(-0.0108963, 3.15738e-08, 0.103201, 0.994601)
bones/17/rotation = Quaternion(-0.0892346, -0.661327, 0.699463, 0.255802)
bones/18/rotation = Quaternion(-0.0819202, 1.19107e-08, 0.775882, 0.625536)
bones/20/rotation = Quaternion(0.687768, 0.448671, 0.00988587, 0.57059)
bones/21/rotation = Quaternion(-0.0771809, -0.330071, 0.300113, 0.891644)
bones/22/rotation = Quaternion(0.0629604, 0.000206231, 0.0121489, 0.997942)
bones/23/rotation = Quaternion(-0.00793696, -0.677353, 0.735579, -0.00730865)
bones/25/rotation = Quaternion(0.687768, -0.448671, -0.00988587, 0.57059)
bones/26/rotation = Quaternion(-0.0771809, 0.330071, -0.300113, 0.891644)
bones/27/rotation = Quaternion(0.0629604, -0.000206231, -0.0121489, 0.997942)
bones/28/rotation = Quaternion(0.00793696, -0.677353, 0.735579, 0.00730864)
bones/32/position = Vector3(20.5891, 18.047, -0.991224)
bones/36/position = Vector3(-20.5891, 18.047, -0.991224)

[node name="CameraY" type="Node3D" parent="."]

[node name="CameraX" type="Node3D" parent="CameraY"]

[node name="Camera_pos" type="Node3D" parent="CameraY/CameraX"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 2.5, 5)

[node name="PlayerCamera" type="Camera3D" parent="CameraY/CameraX/Camera_pos"]
cull_mask = 1
current = true

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../Model/animated_player")
tree_root = SubResource("AnimationNodeBlendTree_j273f")
advance_expression_base_node = NodePath("")
anim_player = NodePath("../Model/animated_player/AnimationPlayer")
parameters/Running/blend_position = 0.0

[node name="EnemyDetector" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="EnemyDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("SphereShape3D_j07qo")

[node name="InteractDetector" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("SphereShape3D_j07qo")

[connection signal="body_entered" from="EnemyDetector" to="." method="_on_enemy_detector_body_entered"]
[connection signal="body_exited" from="EnemyDetector" to="." method="_on_enemy_detector_body_exited"]
[connection signal="body_entered" from="InteractDetector" to="." method="_on_interact_detector_body_entered"]
[connection signal="body_exited" from="InteractDetector" to="." method="_on_interact_detector_body_exited"]

[editable path="Model/animated_player"]
